Bootstrap fleshed out more, just lacks summary

--- a/Project1_Larson.html
+++ b/Project1_Larson.html
@@ -1,19 +1,29 @@
-<div class- "container-fluid">
-  <div>
-    <div class="well">
-      <h1 class="text-primary text-center"><strong>Gary Larson</strong></h1>
-      <h2 class="text-center">author of The Far Side</h2>
-      <div class="container">
-        <img class="img-responsive center-block" src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia-cache-ak0.pinimg.com%2F736x%2Fc3%2F46%2F7d%2Fc3467d593960186cc76743824e1e43ef.jpg&f=1" alt="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fbookriotcom.c.presscdn.com%2Fwp-content%2Fuploads%2F2012%2F09%2Fus-the-people-far-side-779x1024.jpg&f=1">
-      </div>
-      <div class="text-center">
-        <ul>
-          <li>Gary Larson text will go here.</li>
-        </ul>
+<div class="container-fluid">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1 class="text-primary text-center"><strong>Gary Larson</strong></h1>
+        <h2 class="text-center">author of The Far Side</h2>
+        <div class="thumbnail">
+          <image class="img-responsive center-block" src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia-cache-ak0.pinimg.com%2F736x%2Fc3%2F46%2F7d%2Fc3467d593960186cc76743824e1e43ef.jpg&f=1" alt="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fbookriotcom.c.presscdn.com%2Fwp-content%2Fuploads%2F2012%2F09%2Fus-the-people-far-side-779x1024.jpg&f=1">
+            <div class="caption text-center">One of my personal favorites. All of Larson's Far Side series were single panels</div>
+        </div>
+        <div class="col-xs-12 col-sm-10 col col-sm-offset-1 col-md-8 col-md-offset-2">
+          <h3>Some insight to Gary Larson's life and career</h3>
+          <ul>
+            <li>Gary Larson text will go here.</li>
+            <li>He was born and raised in Tacoma</li>
+            <li>He has resisted the use of his comics on the internet, which makes this project a bit ironic</li>
+            <li>Inspired generations of artists and comics</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-  <div class="text-center">
-    <p>written by <a href="https://github.com/ChadChapman">Chad Chapman</a></p>
-  </div>
+  <footer>
+    <div class="text-center">
+      <hr>
+      <p>created by <a href="https://github.com/ChadChapman">Chad Chapman</a></p>
+    </div>
+  </footer>
 </div>
