Final version for submission

--- a/Project1_Larson.html
+++ b/Project1_Larson.html
@@ -11,11 +11,25 @@
         <div class="col-xs-12 col-sm-10 col col-sm-offset-1 col-md-8 col-md-offset-2">
           <h3>Some insight to Gary Larson's life and career</h3>
           <ul>
-            <li>Gary Larson text will go here.</li>
-            <li>He was born and raised in Tacoma</li>
+            <li>Gary Larson created the popular comic series "The Far Side".</li>
+            <li>He was born and raised in University Place, Washington which is a suburb of Tacoma. </li>
             <li>He has resisted the use of his comics on the internet, which makes this project a bit ironic</li>
-            <li>Inspired generations of artists and comics</li>
+            <li>Larson has inspired generations of artists and comics</li>
+            <li>The Far Side can be found on over twenty books as well as popular calendars</li>
+            <li>This tribute page is being kept brief on purpose, I am excited to move on and learn new things!</li>
+            <li>To learn more, check out these sweet links!
           </ul>
+          <div class="row">
+            <div class="col-xs-4">
+              <a href="https://en.wikipedia.org/wiki/Gary_Larson"><button class="btn btn-block btn-primary">Gary Larson</button></a>
+            </div>
+            <div class="col-xs-4">
+              <a href="https://en.wikipedia.org/wiki/The_Far_Side"><button class="btn btn-block btn-primary">The Far Side</button></a>
+            </div>
+            <div class="col-xs-4">
+              <a href="https://en.wikipedia.org/wiki/Tacoma%2C_Washington"><button class="btn btn-block btn-primary">Tacoma, WA</button></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
